# Kernighan_Ritchie_Exercises

./: CMakeLists.txt  Ex1-1  Ex1-1.c  Ex1-10  Ex1-10.c  Ex1-12  Ex1-12.c  Ex1-13  Ex1-13.c  Ex1-14.c  Ex1-2  Ex1-2.c  Ex1-3  Ex1-3.c  Ex1-4  Ex1-4.c  Ex1-5  Ex1-5.c  Ex1-6  Ex1-6.c  Ex1-7  Ex1-7.c  Ex1-8  Ex1-8.c  Ex1-9  Ex1-9.c  README.md
